# hr_parser

./: .gitignore  Dockerfile  Makefile  README.md  env.example  env.sample  pyproject.toml  requirements.txt  run.sh  setup.py  start_app.py
app/: main.py
docs/: FOLDER_UPLOAD_GUIDE.md  JOB_DESCRIPTION_FEATURES.md  JOB_DESCRIPTION_TEMPLATE.md  WEB_INTERFACE_GUIDE.md
examples/: sample_job_description.txt  sample_resume.txt
hr_parser/: config.py  extractor.py  gpt_client.py  repository.py  router.py  schemas.py  service.py
infra/: docker-compose.yml
scripts/: simple_dedup_test.py  upload_folder.py
src/app/: main.py
src/app/ml/: embeddings.py
src/app/scoring/: pipeline.py  rules.py  score.py
src/app/static/: index.html
src/hr_parser/: __init__.py  config.py  extractor.py  gpt_client.py  job_gpt_client.py  job_schemas.py  job_service.py  repository.py  router.py  schemas.py  scoring_router.py  service.py
tests/: test_service_mock.py
